--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             <label for="user-email" class="modal-input-label">Email</label>
             <input type="email" id="user-email" name="user-email" class="modal-input"/>
             <svg class="input-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-maibox"></use>
+              <use href="./images/icons.svg#icon-mailbox"></use>
             </svg>
           </div>
 
