--- a/index.html
+++ b/index.html
@@ -481,52 +481,66 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop" id="modal">
-      <div class="modal">
-        <button type="button" class="modal-btn-close">
-          <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
-        <p class="modal-title">Leave your contacts and we will call you back</p>
+    <div class="backdrop is-open" id="modal">
+  <div class="modal">
+    <button type="button" class="modal-btn-close">
+      <svg class="modal-close-icon" width="8" height="8">
+        <use href="./images/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+    <p class="modal-title">Leave your contacts and we will call you back</p>
 
-        <form class="modal-form">
+    <form class="modal-form">
 
-          <div class="input-wraper">
-            <label for="user-name" class="modal-input-label">Name</label>
-            <input type="text" id="user-name" name="user-name" class="modal-input"/>
-            <svg class="input-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-vector"></use>
-            </svg>
-          </div>
-
-          <div class="input-wraper">
-            <label for="user-phone" class="modal-input-label">Phone</label>
-            <input type="tel" id="user-phone" name="user-phone" class="modal-input"/>
-            <svg class="input-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-telefon"></use>
-            </svg>
-          </div>
-
-          <div class="input-wraper">
-            <label for="user-email" class="modal-input-label">Email</label>
-            <input type="email" id="user-email" name="user-email" class="modal-input"/>
-            <svg class="input-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-mailbox"></use>
-            </svg>
-          </div>
-
-          <label class="input-label" for="user-comment">Comment</label>
-          <textarea id="user-comment" name="user-comment" rows="4" class="modal-textarea" placeholder="Text input"></textarea>
-
-          <label class="modal-checkbox-label">
-            <input type="checkbox" name="privacy" required />
-            <span>I accept the terms and conditions of the <a href="">Privacy Policy</a></span>
-          </label>
-
-          <button type="submit" class="modal-btn-submit">Send</button>
-        </form>
+      <div class="input-wrapper">
+        <label for="user-name" class="modal-input-label">Name</label>
+        <div class="input-icon-wrapper">
+        <input type="text" id="user-name" name="user-name" class="modal-input" />
+        <svg class="input-icon" width="18" height="18">
+          <use href="./images/icons.svg#icon-vector"></use>
+        </svg>
+        </div>
       </div>
-    </div>
+
+      <div class="input-wrapper">
+        <label for="user-phone" class="modal-input-label">Phone</label>
+        <div class="input-icon-wrapper">
+        <input type="tel" id="user-phone" name="user-phone" class="modal-input" />
+        <svg class="input-icon" width="18" height="18">
+          <use href="./images/icons.svg#icon-telefon"></use>
+        </svg>
+        </div>  
+      </div>
+
+      <div class="input-wrapper">
+        <label for="user-email" class="modal-input-label">Email</label>
+        <div class="input-icon-wrapper">
+        <input type="email" id="user-email" name="user-email" class="modal-input" />
+        <svg class="input-icon" width="18" height="18">
+          <use href="./images/icons.svg#icon-mailbox"></use>
+        </svg>
+        </div>
+      </div>
+
+      <div class="input-wrapper">
+        <label for="user-comment" class="modal-input-label">Comment</label>
+        <textarea id="user-comment" name="user-comment" rows="4" class="modal-textarea" placeholder="Text input"></textarea>
+        <svg class="input-icon" width="18" height="18">
+          <use href="./images/icons.svg#icon-comment"></use>
+        </svg>
+      </div>
+
+      <label class="modal-checkbox-label">
+       <input type="checkbox" name="privacy" required />
+       <span class="checkbox-text">
+        I accept the terms and conditions of the 
+         <a href="#" class="policy-link">Privacy Policy</a>
+      </span>
+      </label>
+
+      <button type="submit" class="modal-btn-submit">Send</button>
+    </form>
+  </div>
+</div>
   </body>
 </html>
