--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open" id="modal">
+    <div class="backdrop" id="modal">
   <div class="modal">
     <button type="button" class="modal-btn-close">
       <svg class="modal-close-icon" width="8" height="8">
