--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
       </div>
     </footer>
 
-    <div class="backdrop" id="modal">
+    <div class="backdrop is-open" id="modal">
       <div class="modal">
         <button type="button" class="modal-btn-close">
           <svg class="modal-close-icon" width="8" height="8">
@@ -498,7 +498,7 @@
                 name="user-name"
                 class="modal-input"
               />
-              <svg class="input-icon" width="18" height="18">
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-vector"></use>
               </svg>
             </div>
@@ -513,7 +513,7 @@
                 name="user-phone"
                 class="modal-input"
               />
-              <svg class="input-icon" width="18" height="18">
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-telefon"></use>
               </svg>
             </div>
@@ -528,7 +528,7 @@
                 name="user-email"
                 class="modal-input"
               />
-              <svg class="input-icon" width="18" height="18">
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-mailbox"></use>
               </svg>
             </div>
@@ -541,22 +541,22 @@
               name="user-comment"
               rows="4"
               class="modal-textarea"
-              placeholder="Text input"
-            ></textarea>
-            <svg class="input-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-comment"></use>
-            </svg>
+              placeholder="Text input">
+              </textarea>
           </div>
-
-          <label class="modal-checkbox-label">
-            <input type="checkbox" name="privacy" required />
-            <span class="checkbox-text">
+          <div class="checkbox-wrapper">
+            <input class="visually-hidden" type="checkbox" name="user-privacy" value="true" required />
+            <label class="checkbox-text" for="user-privacy">
+              <span class="checkbox-slot">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-yobanaya-galochka"></use>
+                </svg>
+              </span>
               I accept the terms and conditions of the
               <a href="#" class="policy-link">Privacy Policy</a>
-            </span>
-          </label>
-
+            </label>
           <button type="submit" class="modal-btn-submit">Send</button>
+          </div>
         </form>
       </div>
     </div>
