--- a/index.html
+++ b/index.html
@@ -541,11 +541,10 @@
               name="user-comment"
               rows="4"
               class="modal-textarea"
-              placeholder="Text input">
-              </textarea>
+              placeholder="Text input"></textarea>
           </div>
           <div class="checkbox-wrapper">
-            <input class="visually-hidden" type="checkbox" name="user-privacy" value="true" required />
+            <input class="visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true" required />
             <label class="checkbox-text" for="user-privacy">
               <span class="checkbox-slot">
                 <svg class="checkbox-icon" width="10" height="8">
@@ -555,8 +554,8 @@
               I accept the terms and conditions of the
               <a href="#" class="policy-link">Privacy Policy</a>
             </label>
+            </div>
           <button type="submit" class="modal-btn-submit">Send</button>
-          </div>
         </form>
       </div>
     </div>
